--- a/views/Payment.ejs
+++ b/views/Payment.ejs
@@ -20,8 +20,8 @@
             </div>
             
             <div class="btns">
-                <button class="nd">Paystack</button>
-                <button class="st">Bank Transfer</button>
+                <button class="nd">Pay Now</button>
+                <button class="st">Withdraw</button>
             </div>
       </div>
 </body>
