--- a/views/Coursepage.ejs
+++ b/views/Coursepage.ejs
@@ -11,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
-<body class="course">
-    <section style="display: flex; flex-direction: row; justify-content: space-between;">
+<body>
+    <section class="flex flex-row w-[100%] gap-5">
         <div class="side ">
             <%-include('sidebar')%>
         </div>
