--- a/views/Leaderboard.ejs
+++ b/views/Leaderboard.ejs
@@ -13,8 +13,10 @@
     </head>
 
 
-<body class="h-[110vh] w-[80vw] flex flex-col items-center justify-center font-poppins " >
-    
+<body class="w-[100%] flex flex-row justify-center gap-10 font-poppins " >
+    <div class="sidebar">
+        <%-include('sidebar')%>
+    </div>
         <div class="earn">
             <div class="top"><h2 class=" font-bold text-[20px]">Leaderboard</h2>
                     <h4>view the leaderboard history</h4>
