--- a/views/Referrals.ejs
+++ b/views/Referrals.ejs
@@ -13,8 +13,10 @@
     </head>
 
 
-<body class="h-[100vh] w-[80vw] flex flex-col items-center justify-center font-poppins " >
-    
+<body class="w-[100%] flex flex-row justify-center font-poppins" >
+    <div class="sidebar">
+        <%-include('sidebar')%>
+    </div>
         <div class="earn">
             <div class="top"><h2 class=" font-bold text-[20px]">Referrals History</h2>
                     <h4>Manage Your Friends Transactions With Ease</h4>
