--- a/views/Sidebar.ejs
+++ b/views/Sidebar.ejs
@@ -46,10 +46,10 @@
             <img src="/images/Collab.png" />
             <a href="/referral"><span class="nav_link">Referrals History</span></a>
           </button>
-          <button type="button" >
+          <!-- <button type="button" >
             <img src="/images/Order History.png" />
             <a href="/earning"><span class="nav_link">Earnings History</span></a>
-          </button>
+          </button> -->
           
         </nav>
         <div class="down">
