--- a/public/css/Leaderboard.css
+++ b/public/css/Leaderboard.css
@@ -34,8 +34,14 @@ td, th{
 .earn{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     gap: 10px;
+    width: 100%;
+    padding: 10px;
+    height: 100vh;
+    overflow-y: scroll;
+}
+::-webkit-scrollbar{
+    display: none;
 }
 @media screen and (max-width: 768px) {
     
