--- a/public/css/Signin.css
+++ b/public/css/Signin.css
@@ -26,16 +26,15 @@ body{
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 100%;
 }
 
-button{
-   
-}
 .inp{
-    width: 25vw;
+    width: 100%;
     height: 5vh;
     border-radius: 8px;
     border: none;
+    padding: 5px 10px;
     border: 1px solid #7B7373;
 }
 form{
@@ -43,6 +42,7 @@ form{
     flex-direction: column;
     gap: 40px;
     align-items: flex-start;
+    width: 100%;
 }
 .all{
     display: flex;
@@ -88,11 +88,9 @@ label{
 }
 .ch{
     display: flex;
-    gap: 20px;
-    
-
-    
+    gap: 20px;    
 }
+
 .foot{
     background-color: #5852FE;
     display: flex;
@@ -125,3 +123,12 @@ label{
 }
 
 }
+@media screen and (max-width:950px) {
+    .list a{
+        font-size: 10px;
+        padding: 15px 0;
+    }
+    .sign button{
+        padding: 5px 10px;
+    }
+  }
