--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -17,10 +17,10 @@
             <h2 class="font-semibold text-[20px]">Sign Up</h2>
         </div>
         <form action="/sign-up" method="post" >
-        <div class="form ">
+        <div class="form">
             <div>
                 <label for="">Username</label><br>
-                <input class="inp" type="text" name="username">
+                <input class="inp w-full" type="text" name="username">
             </div>
             <div>
                 <label for="">Enter Your Email</label><br>
@@ -34,17 +34,16 @@
                 <label for="">Confirm Password</label><br>
                 <input class="inp" type="password" name="confirmPassword">
             </div>
-            <div>
+            <div class="flex gap-2">
                 <label for="">Plan Type</label><br>
                 <select name="plan_type" id="">
                     <option value="weekly">Weekly Plan</option>
                     <option value="monthly">Monthly Plan</option>
                 </select>
             </div>
-            
             <div class="ch">
                 <input class="check" type="checkbox" name="" id="">
-                <label for="terms" class="lab capitalize w-[22vw]"> 
+                <label for="terms" class="lab capitalize lg:w-[22vw]"> 
                     i have agree to the 
                     <a href="#" class=" text-[#5852FE]">terms & conditions</a> 
                     and the 
@@ -67,9 +66,9 @@
     <div class="foot">
         <img width="20" src="/images/Arrow 4 (1).png" alt="">
         <div class="list text-[white] font-thin">
-            <h4 class="side">Back To Home</h4>
-            <h4 class="side">Privacy & Policy</h4>
-            <h4>Terms & Condition</h4>
+            <a href="/" class="side">Back To Home</a>
+            <a href="/privacy" class="side">Privacy & Policy</a>
+            <a href="/terms">Terms & Condition</a>
         </div>
     </div>
 </body>
