--- a/views/Signin.ejs
+++ b/views/Signin.ejs
@@ -13,7 +13,7 @@
 <body class=" font-poppins">
     <div class="all">
         <div class="logo">
-            <img src="/images/Gifted-Brainz-PNG (1).png" alt="logo gifted">
+            <img src="/images/gifted_logo.png" alt="logo gifted">
             <h2 class="font-semibold text-[20px]">Sign In</h2>
         </div>
         <form action="/sign-in" method="post">
