--- a/views/Congratulations.ejs
+++ b/views/Congratulations.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/css/Congratulations.css">
     <link rel="stylesheet" href="/css/output.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Congratulations</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
