--- a/views/Withdraw.ejs
+++ b/views/Withdraw.ejs
@@ -12,14 +12,6 @@
         <h1>Widthdraw Fund</h1>
         <form id="withdrawalForm">
             <div>
-                <label for="accountNumber">Email Address:</label>
-                <input type="text" name="email" required>
-            </div>
-            <div>
-                <label for="accountNumber">Bank Name:</label>
-                <input type="text" name="bankName" required>
-            </div>
-            <div>
                 <label for="accountNumber">Account Number:</label>
                 <input type="text" name="accountNumber" required>
             </div>
@@ -37,7 +29,7 @@
                 </select>
             </div>
         
-            <button type="button">Withdraw</button>
+            <button type="button">With-draw</button>
         </form>
     </main>
 </body>
