--- a/views/Coursepage.ejs
+++ b/views/Coursepage.ejs
@@ -14,7 +14,7 @@
 <body>
     <section class="flex flex-row w-[100%] gap-5">
         <div class="side ">
-            <%-include('sidebar')%>
+            <%-include('MainDashboard')%>
         </div>
         <div class="every">
             <div class="top">
