--- a/views/Payment.ejs
+++ b/views/Payment.ejs
@@ -12,17 +12,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body class=" font-poppins">
-    <div class="every">
-        
-            <div class="head">
-                <h2>Payment Method</h2>
-                <h4 class="choose">select your payment method and Proceed with the widrawals.</h4>
-            </div>
+    <div class="pay">
+        <div class="side ">
+            <%-include('MainDashboard')%>
+        </div>
+        <div class="every">
             
-            <div class="btns">
-                <button class="nd">Pay Now</button>
-                <button class="st">Withdraw</button>
-            </div>
-      </div>
+                <div class="head">
+                    <h2>Payment Method</h2>
+                    <h4 class="choose">select your payment method and Proceed with the widrawals.</h4>
+                </div>
+                
+                <div class="btns">
+                    <button class="nd">Pay Now</button>
+                    <button class="st">Withdraw</button>
+                </div>
+          </div>
+    </div>
 </body>
 </html>
