--- a/views/Settings.ejs
+++ b/views/Settings.ejs
@@ -12,49 +12,54 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body class=" font-poppins">
-    <div class="every">
-        
-            <div class="head">
-                <h2>Settings</h2>
-                <h4 class="choose">Manage all your Settings in Here.</h4>
-            </div>
+    <div class="set">
+        <div class="side ">
+            <%-include('MainDashboard')%>
+        </div>
+        <div class="every">
             
-                <form action="/user/<%=id%>" method="post">
-                    <div class="all">   
-                        <div>
+                <div class="head">
+                    <h2>Settings</h2>
+                    <h4 class="choose">Manage all your Settings in Here.</h4>
+                </div>
+                
+                    <form action="/user/<%=id%>" method="post">
+                        <div class="all">   
+                            <div class="inps">
+                                
+                                <!-- <input class="inps" type="text" name="Username"> -->
+                            </div>
                             
-                            <input class="inps" type="text" name="Username">
-                        </div>
-                        
-                        <div>
-                            <label for="Username">Username</label><br>
-                            <div class="edit">
-                            <input class="inp" type="text" name="username" value="<%=user.username %>" id="input1">
-                            <h4 onclick="focususername()" style="cursor: pointer;">Edit</h4>
+                            <div>
+                                <label for="Username">Username</label><br>
+                                <div class="edit">
+                                <input class="inp" type="text" name="username" value="<%=user.username %>" id="input1">
+                                <h4 onclick="focususername()" style="cursor: pointer;">Edit</h4>
+                                </div>
+                            </div>
+                            <div>
+                                <label for="email">Your Email</label><br>
+                                <div class="edit">
+                                    <input class="inp" type="email" name="email" value="<%= user.email %>" id="input2">
+                                    <h4 onclick="focusemail()" style="cursor: pointer;">Edit</h4>
+                                </div>
                             </div>
                         </div>
-                        <div>
-                            <label for="email">Your Email</label><br>
-                            <div class="edit">
-                                <input class="inp" type="email" name="email" value="<%= user.email %>" id="input2">
-                                <h4 onclick="focusemail()" style="cursor: pointer;">Edit</h4>
-                            </div>
+                        <div class="btns">
+                            <button type="submit" class="nd">
+                                Submit
+                            </button>
+                            <button class="ndd">
+                                Log Out
+                            </button>
                         </div>
-                    </div>
-                    <div class="btns">
-                        <button type="submit" class="nd">
-                            Submit
-                        </button>
-                        <button class="nd">
-                            Log Out
-                        </button>
-                    </div>
-
-
-
-                </form>
-            
-      </div>
+    
+    
+    
+                    </form>
+                
+          </div>
+    </div>
       <script>
         function focususername(){
             document.getElementById("input1").focus();
