--- a/public/css/Payment.css
+++ b/public/css/Payment.css
@@ -10,10 +10,14 @@ body{
     display: flex;
     flex-direction: column;
     gap: 30px;
-    padding-top: 30px;
     text-align: center;
    
     align-items: center;
+}
+.pay{
+    display: flex;
+    width: 100%;
+    gap: 50px;
 }
 
 .head{
@@ -43,7 +47,7 @@ body{
     border-radius: 10px;
     transition: 0.5s;
     font-size: 14px;
-    width: 15vw;
+    width: 100%;
     height: 10vh;
 
     
@@ -61,13 +65,13 @@ body{
     border-radius: 10px;
     transition: 0.5s;
     font-size: 14px;
-    width: 15vw;
+    width: 100%;
     height: 10vh;
 
     
     &:hover{
-        color: #D9D9D9;
-        background-color: black;
+        color: white;
+        background-color: #5852FE;
     }
 }
 
@@ -76,10 +80,13 @@ body{
     flex-direction: column;
     gap: 50px;
     align-items: center;
+    margin-top: 30px;
+    width: 100%;
 }
 .btns{
     display: flex;
     gap: 20px;
+    width: 50%;
 }
 
 @media screen and (max-width: 768px){
@@ -93,5 +100,9 @@ body{
     .st{
         width: 100%;
         
+    }
+    .btns{
+        flex-direction: column;
+        width: 100%;
     }
 }
